Using HttpClient for metadata requests